<resources>
    <string name="app_name">Calculator</string>
    <string name="del">DEL</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="calculator">Calculator</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="menu">Menu</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string-array name="currency_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>CZK</item>
        <item>BTC</item>
    </string-array>

</resources>