<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Controller.MainCalculatorActivity">


    <EditText
        android:id="@+id/edittxtAnswer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="end"
        android:inputType="none"
        android:textDirection="ltr"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:weightSum="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btnC"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/c"
                android:textColor="@color/colorOrange"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDel"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/del"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"

                />

            <Button
                android:id="@+id/btnPer"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/percent"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />

            <Button
                android:id="@+id/btnDiv"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/divide"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/seven"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/eight"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/nine"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/multiply"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/four"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/five"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/six"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/subtract"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/one"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/two"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/three"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnSum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/addition"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btnDoubleZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/double_zero"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/zero"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/dot"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/equal"
                android:textColor="@color/colorOrange"
                android:textSize="30sp"


                />
        </TableRow>
    </TableLayout>


</LinearLayout>